# morecontext

./: .travis.yml  CHANGELOG.md  README.rst  morecontext.py  pyproject.toml  setup.cfg  tox.ini
src/: morecontext.py
src/morecontext/: __init__.py
test/: test_additem.py  test_attrdel.py  test_attrrollback.py  test_attrset.py  test_dirchanged.py  test_dirrollback.py  test_envdel.py  test_envrollback.py  test_envset.py  test_itemdel.py  test_itemrollback.py  test_itemset.py  test_openclosable.py
